Add Hello Melon page

--- a/website/public/index.html
+++ b/website/public/index.html
@@ -25,7 +25,7 @@
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Playfair+Display" rel="stylesheet" />
     <title>Leila Berrouayel</title>
   </head>
   <body>
